# http-mitm

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
img/: README.img
src/http_mitm/: main.py
